# lazyops

./: .gitignore  .mcp.json  404.html  AGENTS.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MANIFEST.in  Makefile  README.md  _setup.py  changelogs.md  changelogs.txt  docs.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.py  sitemap.xml
.cursor/: changelog_policy.mdc  instructions.md  module_dependency_policy.mdc
.cursor/rules/: changelog_policy.mdc  common_patterns.mdc  module_dependency_policy.mdc  refactor_policy.mdc  testing_policy.mdc
.github/workflows/: docs.yml  python-publish.yml  release.yml  tests.yml
api/lzl/: index.html
api/lzl/api/: index.html
api/lzl/cloudflare/: index.html
api/lzl/cmd/: index.html
api/lzl/db/: index.html
api/lzl/ext/: index.html
api/lzl/io/: index.html
api/lzl/kops/: index.html
api/lzl/load/: index.html
api/lzl/logging/: index.html
api/lzl/pool/: index.html
api/lzl/proxied/: index.html
api/lzl/require/: index.html
api/lzl/sysmon/: index.html
api/lzl/types/: index.html
api/lzo/: index.html
api/lzo/cmd/: index.html
api/lzo/io/: index.html
api/lzo/registry/: index.html
api/lzo/state/: index.html
api/lzo/types/: index.html
api/lzo/utils/: index.html
code-style/: index.html
devdocs/: PERFORMANCE_IMPROVEMENTS.md
docs/: RefactorPlan.md  code-style.md  file-performance-guide.md  future-updates.md  index.md  mintlify.md  mkdocs-setup.md  presigned-urls-guide.md  todo  todo.md
docs/api/lzl/: api.md  cloudflare.md  cmd.md  db.md  ext.md  index.md  io.md  kops.md  load.md  logging.md  pool.md  proxied.md  require.md  sysmon.md  types.md
docs/api/lzo/: cmd.md  index.md  io.md  registry.md  state.md  types.md  utils.md
docs/changelogs/: 04-22-2025-fileio_multi_provider_instance_support.md  04-22-2025-update_fileio_dependencies.md
examples/: README.md  file_performance_benchmark.py  lazyops_utils.py  lazysources_gdelt.py  presigned_url_example.py
examples/v1/: lazyapi_rpc.py  lazyapi_rpc_bench.py
file-performance-guide/: index.html
future-updates/: index.html
lazyops/: __init__.py  apis.py  common.py  envs.py  models.py  mp.py  mp_utils.py  retry.py  utils.py  version.py
lazyops/configs/: base.py  client.py  k8s.py
lazyops/experimental/: README.md
lazyops/imports/: _aiohttpx.py  _aiokeydb.py  _backoff.py  _fileio.py  _k8s.py  _psutil.py  _pycryptodome.py  _pydantic.py  _slacksdk.py  _sqlalchemy.py  _torch.py  _transformers.py
lazyops/lazyclasses/: README.md  api.py  core.py  utils.py
lazyops/lazyconfig/: README.md  __init__.py  _base.py  tfserving_api.py  tfserving_pb2.py
lazyops/lazydatabase/: README.md  __init__.py  _base.py  core.py  models.py  schema.py
lazyops/lazyio/: __init__.py  _base.py  async_ops.py  models.py
lazyops/lazyrpc/: README.md  _base.py  core.py  dependencies.py  exceptions.py  models.py
lazyops/lazysources/: README.md  __init__.py
lazyops/lazysources/gdelt/: __init__.py  core.py  filters.py  models.py
lazyops/libs/: README.md
lazyops/libs/abcs/: __init__.py
lazyops/libs/aiosqlite/: __init__.py
lazyops/libs/api_utils/: README.md  nodes.py
lazyops/libs/asyncz/: errors.py  types.py  utils.py
lazyops/libs/authzero/: __init__.py
lazyops/libs/compress/: __init__.py  gz.py  lz.py  zb.py
lazyops/libs/db_utils/: __init__.py  utils.py
lazyops/types/: __init__.py  classprops.py  common.py  errors.py  formatting.py  lazydict.py  models.py  models_v1.py  models_v2.py  resources.py
lazyops/utils/: __init__.py  ahelpers.py  assets.py  filestream.py  format_utils.py  helpers.py  imports.py  lazy.py  lazylib.py  logs.py  pooler.py  serialization.py  system.py  times.py
lazyops/v1/: mp.py  mp_utils.py  serializers.py
mintlify/: index.html
mkdocs-setup/: index.html
presigned-urls-guide/: index.html
search/: search_index.json
src/: README.md  version.py
src/lazyops/: __init__.py  version.py
src/lzl/: README.md  version.py
src/lzo/: README.md
tests/: conftest.py  docker-compose.e2e.yml  reproduce_proxy.py  test_cached_inheritance.py  test_file_dynamic_protocol.py  test_file_optimization.py  test_persistence.py  test_pgsql.py  test_strenums.py
tests/_basic/: docker-compose.yml  lzo_fixtures.py  test_failafter.py  test_persistence.py  test_persistence_saving.py  test_timer.py
tests/e2e/: __init__.py  conftest.py  test_api_client.py  test_bucket_creation.py  test_io_file.py  test_io_ser.py  test_load.py  test_persistence.py  test_pool.py  test_proxied.py  test_require.py  test_settings.py
tests/libs/: test_cacheing.py
tests/lzl/: aioreq_c.py  compile_hatchet.py  load.py  oai.py  test_io_file_performance.py  test_io_file_presigned_urls.py  test_io_serializers.py  test_logging_basic.py  test_proxied.py
tests/lzo/: test_registry.py  test_types.py  test_utils.py
todo/: index.html
(+934 files in other folders)
