[project]
name = "lazyops"
dynamic = ["version"]
description = "A collection of submodules/patterns that are commonly used within Internal Development"
readme = "README.md"
license = {text = "MIT License"}
authors = [{name = "Tri Songz", email = "ts@songzcorp.com"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
    "loguru",
    "pydantic",
    "pydantic-settings",
    "frozendict",
    "async_lru",
    "pyyaml",
    "filelock",
    "xxhash",
    "typing_extensions; python_version < '3.8'",
    "setuptools; python_version > '3.11'",
    "anyio>=3.7.1",
    "typer>=0.17.3",
]

[urls]
Homepage = "https://github.com/trisongz/lazyops"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.scripts]
lzl = "lzl.cmd:main"

[project.optional-dependencies]
kops = [
    "kubernetes",
    "kubernetes_asyncio",
    "kopf",
    "aiocache",
    "kr8s",
]
fastapi = [
    "fastapi",
    "uvicorn",
    "python-multipart",
]
builder = [
    "typer",
]
openai = [
    "httpx",
    "backoff",
    "tiktoken",
    "jinja2",
    "pyyaml",
    "numpy",
    "scipy",
]
# Maintain compatability for now.
fileio = [
    "botocore>=1.34.0",
    "boto3>=1.34.0",
    "aiobotocore>=2.11.0",
    "fsspec>=2024.2.0",
    "s3fs>=2024.2.0",
    "s3transfer>=0.10.0",
    "python-magic",
    "aiopath",
    "aiofiles",
    "aiofile",
]
file = [
    "botocore>=1.34.0",
    "boto3>=1.34.0",
    "aiobotocore>=2.11.0",
    "fsspec>=2024.2.0",
    "s3fs>=2024.2.0",
    "s3transfer>=0.10.0",
    "python-magic",
    "aiopath",
    "aiofiles",
    "aiofile",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["lzl", "lzo"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "src.version.VERSION" }

[dependency-groups]
builder-ci = [
    "typer",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "typing_extensions; python_version < '3.8'",
    "setuptools; python_version > '3.11'",
]
